# magia_xilinx_poc

./: .gitignore  README.md  main.py  pyproject.toml
script/: __init__.py  tcl_script.py  xilinx.py
src/: io_and_clock.xdc  top.py
