[tool.poetry]
name = "xilinx-project"
version = "0.1.0"
description = ""
authors = ["khwong-c64 <kin.hin.wong.c@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
antlr4-python3-runtime = "4.13.1"
magia = "*"
magia-flow = "*"

[tool.poetry.group.dev.dependencies]
ruff = "==0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.select = ["F", "E", "W", "I001", "U", "N", "S", "B", "A", "C4", "T10", "ISC", "ICN", "T20", "Q", "RET", "SIM", "TID", "ERA"]
lint.ignore = ["F821", "A003"]
lint.pydocstyle.convention = "pep257"
